# todo_app

./: .gitignore  CMakeLists.txt  README.md
include/todo/: Todo.h  TodoGUI.h
src/todo/: Todo.cpp  TodoGUI.cpp  main_console.cpp  main_gui.cpp
